linus torvalds: respect should be earned

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: youngtuotuo blog
 
-description: "A data scientist think himself ignorant on everything but still try to understand how this world works."
+description: "A data scientist thinks himself ignorant on everything but still try to understand how this world works."
 url: "https://youngtuotuo.github.io"
 github_username: youngtuotuo
 
