--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: youngtuotuo blog
 
-description: "A data scientist thinks himself ignorant on everything but still try to understand how this world works."
+description: ""
 url: "https://youngtuotuo.github.io"
 github_username: youngtuotuo
 
@@ -26,7 +26,7 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: dark
+  skin: auto
 
   social_links:
    - { platform: github, user_url: "https://github.com/youngtuotuo" }
